// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> Default story renders snapshot 1`] = `
<div
  class="layout"
>
  <div
    class="layout__section layout__section--sidebar"
  >
    <div
      class="fpo"
    >
      Sidebar Layout Section
    </div>
  </div>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section
    </div>
  </div>
</div>
`;

exports[`<Layout /> FiftyFifty story renders snapshot 1`] = `
<div
  class="layout layout--50-50"
>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section 1
    </div>
  </div>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section 2
    </div>
  </div>
</div>
`;

exports[`<Layout /> GapLgXl story renders snapshot 1`] = `
<div
  class="layout layout--gap-lg-xl"
>
  <div
    class="layout__section layout__section--sidebar"
  >
    <div
      class="fpo"
    >
      Sidebar Layout Section
    </div>
  </div>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section
    </div>
  </div>
</div>
`;

exports[`<Layout /> GapNone story renders snapshot 1`] = `
<div
  class="layout layout--gap-none"
>
  <div
    class="layout__section layout__section--sidebar"
  >
    <div
      class="fpo"
    >
      Sidebar Layout Section
    </div>
  </div>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section
    </div>
  </div>
</div>
`;

exports[`<Layout /> SixtySevenThirtyThree story renders snapshot 1`] = `
<div
  class="layout layout--67-33"
>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section
    </div>
  </div>
  <div
    class="layout__section layout__section--sidebar"
  >
    <div
      class="fpo"
    >
      Sidebar Layout Section
    </div>
  </div>
</div>
`;

exports[`<Layout /> ThirtyThreeSixtySeven story renders snapshot 1`] = `
<div
  class="layout layout--33-67"
>
  <div
    class="layout__section layout__section--sidebar"
  >
    <div
      class="fpo"
    >
      Sidebar Layout Section
    </div>
  </div>
  <div
    class="layout__section layout__section--main"
  >
    <div
      class="fpo"
    >
      Main Layout Section
    </div>
  </div>
</div>
`;
